<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!--  buttons  -->
    <string name="save">Save</string>
    <string name="create">Create</string>
    <string name="confirm">Confirm</string>

    <!--  email  -->
    <string name="app_name" translatable="false">Mahno Music</string>
    <string name="logo_text" translatable="false">ROCK\nIT</string>
    <string name="waiting_for_confirmation">Waiting for confirmation</string>

    <!--  track  -->
    <string name="upload_track">Upload track</string>
    <string name="select_track">Select track</string>
    <string name="pick_audio_file">Pick an audio file</string>
    <string name="search_tracks">Search tracks</string>

    <!--  album  -->
    <string name="upload_album">Upload album</string>

    <!--  mocks  -->
    <string name="big_text">Слава РА!!!! ЗдРАвия и ПРАцветания Славяне!!! Предлагаемая Вашему вниманию книгу Дух Душа Тело, которая написана на основе ведомостей и Древних Ведических Писаний, сохРАненных Родами хРАнителей и РАхМанов РАхМанской ТРАдиции «Путь СААГАСТА»</string>

    <!--  photo  -->
    <string name="upload_photo">Upload photo</string>

    <!--  menu  -->
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="library">Library</string>
    <string name="search">Search</string>

    <!--  username  -->
    <string name="username">Username</string>
    <string name="enter_name">Please, enter your name or band and your cool login</string>

    <!--  post  -->
    <string name="write_post">Write new post</string>
    <string name="upload_post">Upload post</string>
    <string name="no_posts">There is no new posts yet!</string>

    <!--  profile  -->
    <string name="profile_picture">Profile picture</string>
    <string name="subscribers">%1$d \n subscribers</string>
    <string name="subscriptions">%1$d \n subscriptions</string>

    <!--  playlist  -->
    <string name="create_playlist">Create playlist</string>

    <string name="tracks">Tracks</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="next">Next</string>
    <string name="email_form_error">Enter validate Email!</string>
    <string name="email_taken">This Email is already taken!</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>

    <string name="login">Login</string>
    <string name="name_error">Incorrect name format!</string>
    <string name="surname_error">Incorrect surname format!</string>
    <string name="login_form_error">Incorrect login form!</string>
    <string name="login_taken_error">This login is already taken!</string>
    <string name="create_password">Create strong password</string>
    <string name="enter_password">Enter password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="pswrd_form_error">Incorrect password form!</string>
    <string name="pswrd_match_error">Passwords don\'t match!</string>
    <string name="unexpected_error">An unexpected error has occurred</string>
    <string name="email_or_login">Email or login</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_in_error">Sign in error</string>
    <string name="account_not_found">Account not found!</string>
    <string name="invalid_password">Invalid password!</string>
    <string name="empty_email_error">Input email or login!</string>
    <string name="empty_password_error">Input password!</string>

    <string name="edit">Edit</string>
    <string name="sign_out">Sign out</string>
    <string name="take_photo">Take photo</string>
    <string name="choose_existing">Choose existing photo</string>
    <string name="photo">Photo</string>
    <string name="back">Back</string>
    <string name="pick_file_error">You haven\'t picked file!</string>
    <string name="other">Other</string>
    <string name="account_settings">Account settings</string>
    <string name="settings">Settings</string>
    <string name="change_password">Change password</string>
    <string name="change_login">Change login</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="change">Change</string>
    <string name="password_changed">Password changed successfully</string>
    <string name="current_login">Current login:</string>
    <string name="new_login">New login</string>
    <string name="login_changed">Login changed successfully</string>
    <string name="bio">Bio</string>
    <string name="bio_length_error">Maximum length of bio is 300 characters</string>
    <string name="name_changed">Name changed successfully</string>
    <string name="surname_changed">Surname changed successfully</string>
    <string name="bio_changed">Bio changed successfully</string>
    <string name="change_email">Change email</string>
    <string name="current_email">Current email</string>
    <string name="new_email">New email</string>
    <string name="email_changed">Email changed successfully</string>
    <string name="post">Post</string>
    <string name="post_hint">What\'s up?</string>
    <string name="pick_photo_error">"The maximum number of photos is "</string>
    <string name="add_photo">Add photo</string>
    <string name="add_song">Add song</string>
    <string name="song">Song</string>
    <string name="my_music">My songs</string>
    <string name="for_you">For you</string>
    <string name="song_name">Song name</string>
    <string name="artist">Artist</string>
    <string name="done">Done</string>
    <string name="song_added">Song added</string>
    <string name="play">Play</string>
    <string name="stop">Stop</string>
    <string name="close">Close</string>
    <string name="delete_song">Delete this song from song</string>
    <string name="delete_from_my_music">Delete from my music</string>
    <string name="add_to_my_music">Add to my music</string>
    <string name="deleted_from_my_music">Deleted from your music</string>
    <string name="song_deleted">Song deleted</string>
    <string name="nothing_found">Nothing found</string>
    <string name="select_music_error">The maximum number of songs is</string>
    <string name="empty_post">The post is empty!</string>
    <string name="delete_post">Delete post</string>
    <string name="search_user">Search user</string>
    <string name="follow">Follow</string>
    <string name="unfollow">Unfollow</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="network_error">Loading error. Please check your internet connection</string>
    <string name="picture_changed">Profile picture changed successfully.</string>
    <string name="post_deleted">Post deleted</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="at">at</string>
    <string name="working">Sorry, we are working on this page!</string>
    <string name="player">Player</string>
    <string name="queue">Queue</string>
    <string name="verify_email">Please, verify your email address by following the link we sent.</string>
    <string name="can_sign_in">Then you can sign in to your account.</string>
    <string name="playlists">Playlists</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="playlist_example_title">Example: Chill Vibes</string>
    <string name="songs">Songs</string>
    <string name="delete">Delete</string>
    <string name="new_playlist">New playlist</string>
    <string name="playlist_uploaded">Your playlist added successfully.</string>
    <string name="delete_from_my_playlists">Delete from my playlists</string>
    <string name="deleted_from_my_playlists">Deleted from your playlists</string>
    <string name="add_playlist">Add to My playlists</string>
    <string name="playlist_added">Added to your playlists.</string>
    <string name="playlist_deleted">Playlist deleted.</string>
    <string name="set_cover">Set cover</string>
    <string name="agreement">By pressing Next, you agree to the</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="new_post">New post</string>
    <string name="profile_pic">Profile picture</string>

    <string name="new_song">New song</string>
    <string name="pick_genre">Pick genre</string>
    <string name="album_name">Album name</string>
    <string name="new_album">New album</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <string name="delete_album">Delete album</string>
    <string name="album_deleted">Album deleted</string>
    <string name="albums">Albums</string>
    <string name="choose_genre">Choose at least 1 favourite genre</string>
    <string name="new_from_following">New from artists you follow</string>
    <string name="you_may_like">You may like</string>
    <string name="search_music">Songs, albums and playlists</string>
    <string name="email_header">Enter Email Address</string>
    <string name="email_using">Your email address will be used for signing in to your account</string>
    <string name="confirm_email">Confirm Email Address</string>
    <string name="audition">audition</string>
    <string name="auditions">auditions</string>
    <string name="auditions_genitive"></string>
    <string name="songs_genitive"></string>
    <string name="song_genitive"></string>
    <string name="hours">hr</string>
    <string name="minutes">min</string>
    <string name="seconds">sec</string>
    <string name="edit_profile">Edit</string>
    <string name="your_playlist">Your playlist</string>
</resources>